# sales_pipeline_project

./: README.md  job.ipynb  main.py  pyproject.toml  run tests.ipynb
sales_pipeline/: main.py
sales_pipeline/bronze/: ingestion.py
sales_pipeline/config/: config.yaml
sales_pipeline/gold/: aggregation.py
sales_pipeline/silver/: cleaning.py
sales_pipeline/utils/: spark_session.py
tests/: test_cleaning.py
