[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales_pipeline"
version = "0.1.3"
description = "Pipeline Spark de ventes"
authors = [{name = "Briac Six"}]
dependencies = [
  "pyspark",
  "pyyaml"
]


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"sales_pipeline" = ["config/*.yaml"]
